# deb2pkg

./: .gitignore  CMakeLists.txt  LICENSE  PKGBUILD  README.md  build_static.sh
.github/workflows/: build.yml
src/: main.cpp
src/core/: errors.h  executor.cpp  executor.h  i18n.cpp  i18n.h  logger.cpp  logger.h  musl_compat.c  types.h
src/extract/: archive_reader.cpp  archive_reader.h  deb_extractor.cpp  deb_extractor.h  rpm_extractor.cpp  rpm_extractor.h
src/generate/: makepkg_builder.cpp  makepkg_builder.h  pkgbuild_writer.cpp  pkgbuild_writer.h
src/metadata/: deb_control_parser.cpp  deb_control_parser.h  rpm_header_parser.cpp  rpm_header_parser.h
src/pkgfile/: pkgfile_resolver.cpp  pkgfile_resolver.h
src/transform/: elf_dependency_scanner.cpp  elf_dependency_scanner.h  path_fixer.cpp  path_fixer.h
